# vive_libsuvrive_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: trackers.yaml  vive_compat.yaml
launch/: libsurvive_tracking.launch  libsurvive_tracking.launch.py  vive_compat.launch  vive_compat.launch.py
scripts/: install_libsurvive.sh  survive_tracking_node.py
src/vive_libsurvive_ros/: survive_tracking_node.py  survive_utils.py  transforms.py
udev/: 83-vive-libsurvive.rules
