<?xml version="1.0"?>
<package format="2">
  <name>vive_libsurvive_ros</name>
  <version>0.1.0</version>
  <description>
    Steam-free HTC VIVE Tracker / Lighthouse tracking for ROS1 (Noetic) using libsurvive.
    Publishes PoseStamped + TF (and optionally TwistStamped) for multiple trackers and
    base stations without SteamVR / OpenVR. Designed for 3 trackers (2 via dongle, 1 via
    direct USB) and 2x SteamVR 2.0 base stations.
  </description>

  <maintainer email="fndlrkdl94@gmail.com">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- pure python node: no compiled ROS targets, libsurvive is an external lib -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf</depend>
  <depend>python3-numpy</depend>

  <export>
  </export>
</package>
